testdata/zkc/invalid/type_invalid_02.zkc
;;error:3:19-20:bit overflow (u2 into u1)
type bool = u1
const TRUE:bool = 2